force-app/main/default/objects/Shipment_Address__c/Shipment_Address__c.object-meta.xml
<CustomObject>
    <label>Shipment Address</label>
    <nameField>
        <label>Shipment Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipment Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>