force-app/main/default/objects/Shipment_Address__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Shipment Addresses</relationshipLabel>
    <relationshipName>Shipment_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>