force-app/main/default/objects/Shipment_Address__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <formula>Street__c + &apos; &apos; +Number__c + &apos; &apos;+ Flat__c +&apos;, &apos;+  City__c + &apos;, &apos; +  State__c + &apos; (&apos; +  Country__c +&apos;) &apos; + &apos;, &apos; +   Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>