force-app/main/default/objects/Shipment_Address__c/fields/isPrimary__c.field-meta.xml
<CustomField>
    <fullName>isPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check that determines if the shipment address is contacts’ primary or not</description>
    <label>isPrimary</label>
    <type>Checkbox</type>
</CustomField>